# terrain-gen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  devlog.md
gui/: main.cpp  shader.cpp  terrain_renderer.cpp  viewport_navigator.cpp
include/: geometry_utils.hpp  input_utils.hpp  noise_utils.hpp  shader.hpp  terrain_renderer.hpp  tile.hpp  tilemap.hpp  viewport_navigator.hpp  zone.hpp  zone_planner.hpp
resources/shaders/: terrain.frag  terrain.vert
src/: main.cpp  tilemap.cpp  zone.cpp  zone_planner.cpp
